Initial Update Goof Food Ideas

--- a/GoofFoodIdeas.html
+++ b/GoofFoodIdeas.html
@@ -140,7 +140,12 @@
         </div>
 
 
-        <div class="alert alert-tranparent" id="line" role="alert">
+        <div class="alert alert-tranparent" id="line" role="alert" style="padding-bottom: 1.5em;
+    padding-top: 1em;
+    text-align: center;
+    font-size: 2em;
+    font-family: 'Koulen', cursive;
+    font-size: 2.6em;">
           There's A Lot More!
           </div>
 
