--- a/FruitsVegetables.html
+++ b/FruitsVegetables.html
@@ -189,8 +189,13 @@
               </div>
 
 
-<div class="alert alert-tranparent" id="line" role="alert">
-  However, keep in mind that good health doesn't come from any single food.
+<div class="alert alert-tranparent" id="line" role="alert" style="padding-bottom: 1.5em;
+    padding-top: 1em;
+    text-align: center;
+    font-size: 2em;
+    font-family: 'Koulen', cursive;
+    font-size: 2.6em;">
+However, keep in mind that good health doesn't come from any single food
 </div>
 
 
