--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+    
     <head>
+        
+        <meta name="viewport" content="initial-scale=1, width=device-width">
 
         <title>Doctor Yum</title>
         <link rel="icon" type="image/x-icon" href="FOOD.jpg">
