--- a/Feedback.html
+++ b/Feedback.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
+        <meta name="viewport" content="initial-scale=1, width=device-width">
 
         <title>Dr. Yum -> Feedback!</title>
         <link rel="icon" type="image/x-icon" href="FOOD.jpg">
