--- a/GoofFoodIdeas.html
+++ b/GoofFoodIdeas.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        
+        <meta name="viewport" content="initial-scale=1, width=device-width">
 
       <title>Doctor Yum - Fruits and Vegetables to use</title>
       <link rel="icon" type="image/x-icon" href="FOOD.jpg">
